--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -280,7 +280,143 @@
         </div>
       </div>
       <!--timeloop end-->
+      <div id="collapseExample02" style="padding-top: 20px;" class="col-md-12 collapse">
+        <div class="col-md-6">
+          <div class="inner cover">
+            <h1 class="cover-heading">
+                      <font>Dauber</font>
+                    </h1>
+            <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
+            <p><font>2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+                  これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
+                  DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
+                  彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
+                  イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメント(Do it Yourself運動)と時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(組織集団)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかったと言える。
 
+                  Kingsizeは、その書籍の名のごとく大きなマーカーを制作する一連の過程といくつかの論述で構成されている。
+                  当時としては見ることがなかったであろう50mmの太さのマーカーを、資材量販店で揃えたであろう素材を組み合わせて制作する過程と、そのマーカーを世界中のライターたちに配布、実用している記録写真。
+                  そしてkingsizeの発行者であり作家のアダムスの序文、ニューヨークで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したクレイグ・キャッスルマンによる当時の情景描写、世界大戦後グローバリズムが進む中で世界中にアメリカナイゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたアンドレアス・バーグの論述で構成されていた。
+
+                  先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。そうした意味で世界のグローバリズムの中でグラフィティがニューヨークを経て世界中に広がっていく風景と、スウェーデンでの背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
+
+                  ではkingsizeが出版されてから16年が経過した今、ストリートで活動を続けるライターたちにとってのDIYマーカー、ツールどう変化したのだろうか。このプロジェクトでは、グラフィティにおけるツールの変容と表現の変容を考察するとともに、kingsizeを参照としながら、2010年代以降のメーカームーブメントの発展とともに可能となったデジタルファブリケーションの技術をもとに3Dソフトによるモデリングや、ソーシャルネットワーキングによる情報共有を試み、現代におけるDIYマーカーのあり方を探る。
+                  </font></p>
+          </div>
+        </div>
+        <!--text-->
+        <div class="col-md-6">
+          <div class="grid_row">
+            <div style="border-top: 1px solid" class="row">
+              <div class="col-3"><small>Project</small></div>
+              <div class="col-3 "><small>Program</small></div>
+              <div class="col-2"><small>Location</small></div>
+            </div>
+
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>Dauber</small></div>
+              <div class="col-3 toybox"><small>20200701</small></div>
+              <div class="col-2 toybox"><small>TOKYO</small></div>
+            </div>
+            <!--target staryt-->
+            <div class="row">
+              <div class="col-3"><small>"norma”</small></div>
+              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
+            </div>
+            <!--target end-->
+          </div>
+
+        </div>
+        <!--target  collapseExample stary-->
+        <div id="collapseExample" class="col-md-6 collapse">
+          <div class="grid_row">
+            <div class="row toybox">
+              <div class="col-3"><small>Size</small></div>
+              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-2"><small>Date</small></div>
+            </div>
+            <div class="row ">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
+              </div>
+            </div>
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--target  collapseExample -->
+
+
+        <!-- <div class="row toybox">
+                    <div class="col-3 toybox"><small>"R40”</small></div>
+                    <div class="col-3 toybox"><small>1:1</small></div>
+                    <div class="col-2 toybox"><small>STL</small></div>
+                    <div class="col-3 toybox">
+                      <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
+                    </div>
+                  </div> -->
+
+        <!--text-->
+
+        <!--collapse start-->
+
+        <div class="col-md-6">
+
+          <!--carousel-custom-->
+
+          <div id="carousel-custom001" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom001" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom001" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
+
+
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+                          <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                            <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                          </li>
+                          <li data-target="#carousel-custom" data-slide-to="1">
+                            <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                          </li>
+                          <li data-target="#carousel-custom" data-slide-to="2">
+                            <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                          </li>
+                        </ol>-->
+            <!--Indicators end-->
+          </div>
+
+          <!--carousel-custom-->
+        </div>
+        <!--collapse end-->
+
+      </div>
       <!--timeloop start-->
       <div class="col-md-12">
         <div class="grid_row">
