--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -203,10 +203,13 @@
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item ">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/41/bc/1c/41bc1cf8bb9bed42a0271fba3b99ee8d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item ">
                 <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/b6/25/27/b6252758ac6c291bdf70a163c9c85ab5.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
 
@@ -325,7 +328,7 @@
 
         </div>
         text end-->
-        <!--target  collapseExample stary-->
+        <!--target  collapseExample stary
         <div id="collapseExample" class="col-md-6 collapse">
           <div class="grid_row">
             <div class="row toybox">
@@ -351,7 +354,7 @@
             </div>
           </div>
         </div>
-        <!--target  collapseExample -->
+        target  collapseExample -->
 
 
         <!-- <div class="row toybox">
@@ -375,13 +378,13 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/b6/25/27/b6252758ac6c291bdf70a163c9c85ab5.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item ">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/41/bc/1c/41bc1cf8bb9bed42a0271fba3b99ee8d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item ">
-                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/95/99/51/959951f0bee94101b40b44712b9326fe.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
 
