--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -144,7 +144,7 @@
             <!--target staryt-->
             <div class="row">
               <div class="col-3"><small>"👀👀👀”</small></div>
-              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Japan PetBottle</a></small></div>
+              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm PetBottle</a></small></div>
             </div>
             <!--target end-->
           </div>
@@ -284,23 +284,17 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                      <font>Dauber</font>
+                      <font>MagicInk</font>
                     </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
-            <p><font>2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
-                  これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
-                  DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
-                  彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
-                  イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメント(Do it Yourself運動)と時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(組織集団)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかったと言える。
-
-                  Kingsizeは、その書籍の名のごとく大きなマーカーを制作する一連の過程といくつかの論述で構成されている。
-                  当時としては見ることがなかったであろう50mmの太さのマーカーを、資材量販店で揃えたであろう素材を組み合わせて制作する過程と、そのマーカーを世界中のライターたちに配布、実用している記録写真。
-                  そしてkingsizeの発行者であり作家のアダムスの序文、ニューヨークで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したクレイグ・キャッスルマンによる当時の情景描写、世界大戦後グローバリズムが進む中で世界中にアメリカナイゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたアンドレアス・バーグの論述で構成されていた。
-
-                  先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。そうした意味で世界のグローバリズムの中でグラフィティがニューヨークを経て世界中に広がっていく風景と、スウェーデンでの背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
-
-                  ではkingsizeが出版されてから16年が経過した今、ストリートで活動を続けるライターたちにとってのDIYマーカー、ツールどう変化したのだろうか。このプロジェクトでは、グラフィティにおけるツールの変容と表現の変容を考察するとともに、kingsizeを参照としながら、2010年代以降のメーカームーブメントの発展とともに可能となったデジタルファブリケーションの技術をもとに3Dソフトによるモデリングや、ソーシャルネットワーキングによる情報共有を試み、現代におけるDIYマーカーのあり方を探る。
-                  </font></p>
+            <p>
+              <font>DIYとメーカーズムーブメントを通って、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを作成し、流用する形になった。
+              タイトルにあるマジックインクという製品は古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物、もう一点流用したのがペイントマーカー。
+              1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
+              二つの製品は比較的に容易に入手が可能で本来は製品を組み合わせる事を想定していない、なのでジョイント部分となる、ねじ切り箇所に合わせたインクホルダーを作る事で本来組み合わせる事ない製品を流用することになった。
+              データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
+              </font>
+            </p>
           </div>
         </div>
         <!--text start
