--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -287,13 +287,15 @@
                     </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
             <p>
-              <font>DIYとメーカーズムーブメントを通って、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを作成し、流用する事ができた。
-                実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、名称として使っている。
-              蛇足になったが、本題のタイトルにある通りマジックインクという製品。
-              知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物、そしてもう一点の流用したのがペイントマーカー。
+              <font>DIYとメーカーズムーブメントを通って、A5pressからKingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてメイカームーブメントというデジタルツールを用いて、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、DAUBERという塗布具のプロジェクトを進めている。
+                実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、プロジェクトの名称として使用しているのは悪しからず流していただければとありがたい。
+              何しろ、蛇足になったが本題のタイトルにある通りマジックインクという製品。
+              知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点の流用したのがペイントマーカー。
               1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
-              二つの製品は比較的に容易に入手が可能で本来は製品を組み合わせる事を想定していない、なのでジョイント部分となる、ねじ切り箇所に合わせたインクホルダーを作る事で本来組み合わせる事ない製品を組み合わせて出来上がっている。
-
+              二つの製品は比較的に容易に入手が可能で本来は製品を組み合わせる事を想定していない、なのでジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。
+              丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味が発揮できない事も考慮して50mmのサイズに変更した。
+              その際に色々と変更箇所を模索しながらも、Dauberの形態を徐々に変化する事で、今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。
+              つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する機械を組み合わせる事で、2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれるだ。
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
               </font>
             </p>
