--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -291,7 +291,9 @@
                 補足だが、実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、流体部分の名称を拝借したままプロジェクトの名称として使用している。
                 話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
               早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー、このサイトを知っているのだから説明する必要もない代物であって知らない人はすぐにでもサイトを閉じるべきだ。
-              今回流用したのは以下に点の箇所、1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
+              今回流用したのは以下、二点の箇所を流用していただきたい。<br>
+              1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
+              <br>
               ぱっぱと進めるが、二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
               なので存在しない塗布部分をメイカーズムーブメントという概念を取り入れて、ジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。
               概念と言っても、単語を検索する事でそのものが何を指しているのかを共有しやすくするために文章化しているのだが、本来は勝手に３Dでプリントして遊べと言いたいがそれだとプロジェクトにならないようなので、説明している🖕
