--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -295,10 +295,10 @@
               1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
               <br>
               ぱっぱと進めるが、二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
-              なので存在しない塗布部分をメイカーズムーブメントという概念を取り入れて、ジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。
-              概念と言っても、単語を検索する事でそのものが何を指しているのかを共有しやすくするために文章化しているのだが、本来は勝手に３Dでプリントして遊べと言いたいがそれだとプロジェクトにならないようなので、説明している🖕
-              次に丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。
-              その際に色々と変更箇所を模索しながらも、Dauberの形態を徐々に変化する事で、今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。
+              なので存在しない塗布部分をメイカーズムーブメントという概念を取り入れて、ジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。<br>
+              概念と言っても、単語を検索する事でそのものが何を指しているのかを共有しやすくするために文章化しているのだが、本来は勝手に３Dでプリントして遊べと言いたいがそれだとプロジェクトにならないようなので、説明している🖕<br>
+              次に丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。<br>
+              その際に色々と変更箇所を模索しながらも、Dauberの形態を徐々に変化する事で、今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。<br>
               つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する装置が見事にピシャリと組み合わさった。良い成功例なのだと思う。
               2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
               デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。
