--- a/dauber_backup_1226.html
+++ b/dauber_backup_1226.html
@@ -131,46 +131,55 @@
         <div class="col-md-6">
           <div class="grid_row">
             <div style="border-top: 1px solid" class="row">
-              <div class="col-3"><small>Project</small></div>
+              <div class="col-2"><small>Project</small></div>
               <div class="col-3 "><small>Program</small></div>
-              <div class="col-2"><small>Location</small></div>
+              <div class="col-3"><small>Location</small></div>
             </div>
 
             <div class="row toybox">
-              <div class="col-3 toybox"><small>Dauber</small></div>
+              <div class="col-2 toybox"><small>Dauber</small></div>
               <div class="col-3 toybox"><small>20200701</small></div>
-              <div class="col-2 toybox"><small>TOKYO</small></div>
+              <div class="col-3 toybox"><small>TOKYO</small></div>
             </div>
             <!--target staryt-->
             <div class="row">
-              <div class="col-3"><small>"👀👀👀”</small></div>
-              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm PetBottle</a></small></div>
+              <div class="col-2"><small>Product</small></div>
+              <div class="col-5"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">”Magic ink”</a></small></div>
             </div>
             <!--target end-->
           </div>
+
         </div>
         <!--target  collapseExample stary-->
         <div id="collapseExample" class="col-md-6 collapse">
           <div class="grid_row">
             <div class="row toybox">
-              <div class="col-3"><small>Size</small></div>
+              <div class="col-2"><small>Size</small></div>
               <div class="col-3 "><small>Scale</small></div>
-              <div class="col-2"><small>Date</small></div>
+              <div class="col-3"><small>Date</small></div>
             </div>
             <div class="row ">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>”Download”</small></a>
               </div>
             </div>
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+            <div class="row ">
+              <div class="col-2 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>”Download”</small></a>
+              </div>
+            </div>
+            <div class="row ">
+              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-3 toybox"><small>G-code</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1PVPJqS4BOEekwUgLX082Kea0SkcO2n_F"><small>”Download”</small></a>
               </div>
             </div>
           </div>
@@ -189,8 +198,6 @@
 
         <!--text-->
 
-        <!--collapse start-->
-
         <div class="col-md-6">
 
           <!--carousel-custom-->
@@ -199,13 +206,13 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="https://i.pinimg.com/originals/ad/28/5b/ad285bb04cefd3a62a90ebced869af30.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item ">
                 <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-              <div class="item ">
-                <img src="https://i.pinimg.com/originals/41/bc/1c/41bc1cf8bb9bed42a0271fba3b99ee8d.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
 
@@ -222,26 +229,25 @@
 
             <!-- Indicators start-->
             <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-                    <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                      <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                    </li>
-                    <li data-target="#carousel-custom" data-slide-to="1">
-                      <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                    </li>
-                    <li data-target="#carousel-custom" data-slide-to="2">
-                      <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                    </li>
-                  </ol>-->
+              <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+              </li>
+              <li data-target="#carousel-custom" data-slide-to="1">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+              </li>
+              <li data-target="#carousel-custom" data-slide-to="2">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+              </li>
+            </ol>-->
             <!--Indicators end-->
           </div>
 
           <!--carousel-custom-->
         </div>
-        <!--collapse end-->
-
       </div>
 
     </div>
+
     <!--productNav start-->
     <div id="main">
       <div class="container">
@@ -251,7 +257,7 @@
       </div>
     </div>
     <!--productNav end-->
-    <!--start-->
+    <!--start
     <div class="container">
       <div class="col-md-12">
         <div class="grid_row">
@@ -259,163 +265,48 @@
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>年号</small></div>
             <div class="col-2"><small>月日</small></div>
-            <!--div class="col-2"><small>時間</small></div-->
+            <div class="col-2"><small>時間</small></div>
             <div class="col-2"><small>製品</small></div>
             <div class="col-2"><small>備考</small></div>
           </div>
         </div>
       </div>
-      <!--timeloop start-->
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>2021</small></div>
             <div class="col-2"><small>12/23</small></div>
-            <!--div class="col-2"><small>15:00</small></div-->
+            <div class="col-2"><small>15:00</small></div>
             <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
             <div class="col-2"><small>💡</small></div>
           </div>
         </div>
       </div>
-      <!--timeloop end-->
-      <div id="collapseExample02" style="padding-top: 20px;" class="col-md-12 collapse">
-        <div class="col-md-6">
-          <div class="inner cover">
-            <h1 class="cover-heading">
-                      <font>MagicInk</font>
-                    </h1>
-            <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
-            <p>
-              <font>DIYとメーカーズムーブメントを通って、Kingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてメイカームーブメントというデジタルツールを用いて、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、Dauberという塗布具のプロジェクトを進めている。
-                補足だが、実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、流体部分の名称を拝借したままプロジェクトの名称として使用している。
-                話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
-              早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー、このサイトを知っているのだから説明する必要もない代物であって知らない人はすぐにでもサイトを閉じるべきだ。
-              今回流用したのは以下、二点の箇所を流用していただきたい。<br>
-              1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
-              <br>
-              ぱっぱと進めるが、二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
-              なので存在しない塗布部分をメイカーズムーブメントという概念を取り入れて、ジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。<br>
-              概念と言っても、単語を検索する事でそのものが何を指しているのかを共有しやすくするために文章化しているのだが、本来は勝手に３Dでプリントして遊べと言いたいがそれだとプロジェクトにならないようなので、説明している🖕<br>
-              次に丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。<br>
-              その際に色々と変更箇所を模索しながらも、Dauberの形態を徐々に変化する事で、今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。<br>
-              つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する装置が見事にピシャリと組み合わさった。良い成功例なのだと思う。
-              2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
-              デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。
-              データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
-              </font>
-            </p>
-          </div>
-        </div>
-        <!--text start
-        <div class="col-md-6">
-          <div class="grid_row">
-            <div style="border-top: 1px solid" class="row">
-              <div class="col-3"><small>Project</small></div>
-              <div class="col-3 "><small>Program</small></div>
-              <div class="col-2"><small>Location</small></div>
-            </div>
-
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>Dauber</small></div>
-              <div class="col-3 toybox"><small>20200701</small></div>
-              <div class="col-2 toybox"><small>TOKYO</small></div>
-            </div>
-            <div class="row">
-              <div class="col-3"><small>"norma”</small></div>
-              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
-            </div>
-          </div>
-
-        </div>
-        text end-->
-        <!--target  collapseExample stary
-        <div id="collapseExample" class="col-md-6 collapse">
-          <div class="grid_row">
-            <div class="row toybox">
-              <div class="col-3"><small>Size</small></div>
-              <div class="col-3 "><small>Scale</small></div>
-              <div class="col-2"><small>Date</small></div>
-            </div>
-            <div class="row ">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>Blender</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
-              </div>
-            </div>
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
+      end-->
+    <!--start
+      <div id="collapseExample02" class="col-md-12 collapse">
+        <div class="grid_row">
+          <div class="row">
+            <div class="media">
+              <div class="media-body">
+                <div class="col-md-12">
+                  <div class="inner cover">
+                    <h1 class="cover-heading"><font>マジックインク補充液とペイントマーカー</font></h1>
+                    <p><font>💡：マッシュアップする方法</font></p>
+                    <small>ペイントマーカーに付属している。
+                      インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを成立させる。
+                      写真は改めて投稿します。
+                    </small>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        target  collapseExample -->
-
-
-        <!-- <div class="row toybox">
-                    <div class="col-3 toybox"><small>"R40”</small></div>
-                    <div class="col-3 toybox"><small>1:1</small></div>
-                    <div class="col-2 toybox"><small>STL</small></div>
-                    <div class="col-3 toybox">
-                      <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
-                    </div>
-                  </div> -->
-
-        <!--text-->
-
-        <!--collapse start-->
-
-        <div class="col-md-6">
-
-          <!--carousel-custom-->
-
-          <div id="carousel-custom001" class="carousel slide" data-ride="carousel">
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="https://i.pinimg.com/originals/00/60/2d/00602d8d05949c2fe71ab61399e650ea.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-            </div>
-
-            <!-- Controls -->
-            <!---->
-            <a class="left carousel-control" href="#carousel-custom001" role="button" data-slide="prev">
-              <!--<span class="fas fa-arrow-left"></span>-->
-            </a>
-            <a class="right carousel-control" href="#carousel-custom001" role="button" data-slide="next">
-              <!--<span class="fas fa-arrow-right"></span>-->
-            </a>
-            <!---->
-
-
-            <!-- Indicators start-->
-            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-                          <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                            <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                          </li>
-                          <li data-target="#carousel-custom" data-slide-to="1">
-                            <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                          </li>
-                          <li data-target="#carousel-custom" data-slide-to="2">
-                            <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
-                          </li>
-                        </ol>-->
-            <!--Indicators end-->
-          </div>
-
-          <!--carousel-custom-->
-        </div>
-        <!--collapse end-->
-
       </div>
-
-    </div>
+      end-->
+  </div>
   </div>
   <!--end-->
   </div>
