--- a/dauber.html
+++ b/dauber.html
@@ -153,30 +153,37 @@
         <div id="collapseExample" class="col-md-6 collapse">
           <div class="grid_row">
             <div class="row toybox">
-              <div class="col-3"><small>Size</small></div>
+              <div class="col-2"><small>Size</small></div>
               <div class="col-3 "><small>Scale</small></div>
-              <div class="col-2"><small>Date</small></div>
+              <div class="col-3"><small>Date</small></div>
             </div>
             <div class="row ">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>”Download”</small></a>
               </div>
             </div>
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+            <div class="row ">
+              <div class="col-2 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>”Download”</small></a>
+              </div>
+            </div>
+            <div class="row ">
+              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-3 toybox"><small>G-code</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1PVPJqS4BOEekwUgLX082Kea0SkcO2n_F"><small>”Download”</small></a>
               </div>
             </div>
           </div>
         </div>
         <!--target  collapseExample -->
-
 
         <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
