--- a/dauber.html
+++ b/dauber.html
@@ -298,7 +298,7 @@
                 補足だが、実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、流体部分の名称を拝借したままプロジェクトの名称として使用している。
                 話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
               早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー、このサイトを知っているのだから説明する必要もない代物であって知らない人はすぐにでもサイトを閉じるべきだ。
-              今回流用したのは以下二点の箇所を流用した。<br>
+              今回以下、二点の箇所を流用した。<br>
               1.マジックインクの流用箇所はインク補充容器<br>
               2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
               <br>
